Removing possible fix for zooming issue on Safari

--- a/style.css
+++ b/style.css
@@ -12,13 +12,6 @@ body{
 	line-height: 19px;
 }
 
-@media screen and (-webkit-min-device-pixel-ratio:0) { 
-	select:focus, textarea:focus, input:focus {
-		font-size: 16px;
-		background:#fff;
-	}
-}
-
 a{
 	color: #3896C2;
 }
